add static files detail and create route

--- a/src/Gummybear/appsettings.json
+++ b/src/Gummybear/appsettings.json
@@ -1,4 +1,5 @@
 ﻿{
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;DatabaseGummybear;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=Gummybear;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
+}
